Added styling for the about and home page

--- a/about-me.html
+++ b/about-me.html
@@ -7,23 +7,28 @@
     </head>
     <body>
         <header>
-            <h1>Portfolio of Shelley Tsui</h1>
+            <h1>Portfolio</h1>
             <nav>
-                <a href="index.html">Projects</a> 
+                <ul class="navigation">
+                    <li>
+                        <a href="index.html">Projects</a>
+                    </li>
+                    <li>
+                        <a href="about-me.html">About Me</a>
+                    </li>
+                </ul>
             </nav>
         </header>
+        <hr>
 
         <section>
-            <h2>It's nice to meet you!</h2>
-            <article>
-                <h2>About Me</h2>
-                <p>It's nice to meet you! My name is Shelley. I graduated from UW in 2021 with a BDes in visual communication design and a minor in informatics.
+                <p class="about-me">It's nice to meet you! My name is Shelley. I graduated from UW in 2021 with a BDes in visual communication design and a minor in informatics.
                     Outside of my 9-5, I love learning new things (like this!), spending time with my husband and pets, and finding as many delicious cake shops as possible in Seattle.
                 </p>
-            </article>
         </section>
+        <hr>
         <footer>
-            This portfolio was coded by Shelley Tsui, an experience designer at <a href="https://www.september.works">September Works</a>.
+            <p>This portfolio was coded with ♥ by Shelley Tsui, an experience designer at <a href="https://www.september.works">September Works</a>.</p>
         </footer>
     </body>
 </html>
