--- a/index.html
+++ b/index.html
@@ -3,35 +3,47 @@
     <head>
         <meta charset="utf-8">
         <title>Home</title>
+        <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
     </head>
     <body>
         <header>
-            <h1>Portfolio of Shelley Tsui</h1>
+            <h1>Portfolio</h1>
             <nav>
-                <a href="about-me.html">About Me</a> 
+                <ul class="navigation">
+                    <li>
+                        <a href="index.html">Projects</a>
+                    </li>
+                    <li>
+                        <a href="about-me.html">About Me</a>
+                    </li>
+                </ul>
             </nav>
         </header>
+        <hr>
 
         <section>
-            <h2>Projects</h2>
             <article>
-                <img src="images/antologi-linkedin.png" width="300" alt="Screenshot of the Antologi startup company LinkedIn page.">
+                <img src="images/antologi-linkedin.png" alt="Screenshot of the Antologi startup company LinkedIn page.">
                 <h3>Antologi</h3>
-                <p>Antologi was a startup within Google's Area 120 that helped people attend meetings asynchronously. Click <a href="https://antologi.area120.com/">here</a> to learn more.</p>
+                <p>Antologi was a startup within Google's Area 120 that helped people attend meetings asynchronously.
+                    It was the first project I ever worked on when I started with September Works as a contractor. Click <a href="https://antologi.area120.com/">here</a> to learn more.</p>
             </article>
             <article>
-                <img src="images/xembly-linkedin.png" width="300" alt="Screenshot of the Xembly startup company LinkedIn page.">
+                <img src="images/xembly-linkedin.png" alt="Screenshot of the Xembly startup company LinkedIn page.">
                 <h3>Xembly</h3>
-                <p>Xembly is an AI chief of staff to help automate the mundane so you can focus on what matters. Click <a href="https://www.xembly.com/">here</a> to learn more.</p>
+                <p>Xembly is an AI chief of staff to help automate the mundane so you can focus on what matters.
+                    Their AI assistant Xena is very smart and proactive in supporting you and your needs. Click <a href="https://www.xembly.com/">here</a> to learn more.</p>
             </article>
             <article>
-                <img src="images/lesson-01.png" width="300" alt="Screenshot of my HTML assignment from Lesson 01">
+                <img src="images/lesson-01.png" alt="Screenshot of my HTML assignment from Lesson 01">
                 <h3>Lesson 01</h3>
-                <p>This was my very first assignment ever for HTML and CSS Foundations! Click <a href="https://github.com/tsuishelley/lesson-1-assignment">here</a> to learn more.</p>
+                <p>This was my very first assignment ever for my HTML and CSS Foundations class! I was really happy with the squished cat photo.
+                    I'm generally a big fan of squishing cats. Click <a href="https://github.com/tsuishelley/lesson-1-assignment">here</a> to learn more.</p>
             </article>
         </section>
+        <hr>
         <footer>
-            This portfolio was coded by Shelley Tsui, an experience designer at <a href="https://www.september.works">September Works</a>.
+            <p>This portfolio was coded with ♥ by Shelley Tsui, an experience designer at <a href="https://www.september.works">September Works</a>.</p>
         </footer>
     </body>
 </html>
