Add section headings that I removed previously

--- a/about-me.html
+++ b/about-me.html
@@ -22,6 +22,7 @@
         <hr>
 
         <section>
+                <h2>I'd love to get to know you!</h2>
                 <p class="about-me">It's nice to meet you! My name is Shelley. I graduated from UW in 2021 with a BDes in visual communication design and a minor in informatics.
                     Outside of my 9-5, I love learning new things (like this!), spending time with my husband and pets, and finding as many delicious cake shops as possible in Seattle.
                 </p>
