--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <hr>
 
         <section>
+            <h2>Here's what I've worked on.</h2>
             <article>
                 <img src="images/antologi-linkedin.png" alt="Screenshot of the Antologi startup company LinkedIn page.">
                 <h3>Antologi</h3>
