--- a/index.html
+++ b/index.html
@@ -2,49 +2,68 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Home</title>
+        <title>Shelley Tsui</title>
         <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
     </head>
     <body>
         <header>
-            <h1>Portfolio</h1>
             <nav>
-                <ul class="navigation">
-                    <li>
-                        <a href="index.html">Projects</a>
-                    </li>
-                    <li>
-                        <a href="about-me.html">About Me</a>
-                    </li>
-                </ul>
+                <section class="navigation">
+                        <div>
+                            <a href="test.html">Work</a>
+                        </div>
+                        <div>
+                            <a href="test.html">Resume</a>
+                        </div>
+                        <div>
+                        <a href="about.html">About</a>
+                        </div>
+                    
             </nav>
+            <hr>
         </header>
+        <h1>A user experience designer based in rainy Seattle. I'm well-versed in design, research, front-end development, and cats.</h1>
         <hr>
-
-        <section>
-            <h2>Here's what I've worked on.</h2>
-            <article>
-                <img src="images/antologi-linkedin.png" alt="Screenshot of the Antologi startup company LinkedIn page.">
-                <h3>Antologi</h3>
-                <p>Antologi was a startup within Google's Area 120 that helped people attend meetings asynchronously.
-                    It was the first project I ever worked on when I started with September Works as a contractor. Click <a href="https://antologi.area120.com/">here</a> to learn more.</p>
-            </article>
-            <article>
-                <img src="images/xembly-linkedin.png" alt="Screenshot of the Xembly startup company LinkedIn page.">
-                <h3>Xembly</h3>
-                <p>Xembly is an AI chief of staff to help automate the mundane so you can focus on what matters.
-                    Their AI assistant Xena is very smart and proactive in supporting you and your needs. Click <a href="https://www.xembly.com/">here</a> to learn more.</p>
-            </article>
-            <article>
-                <img src="images/lesson-01.png" alt="Screenshot of my HTML assignment from Lesson 01">
-                <h3>Lesson 01</h3>
-                <p>This was my very first assignment ever for my HTML and CSS Foundations class! I was really happy with the squished cat photo.
-                    I'm generally a big fan of squishing cats. Click <a href="https://github.com/tsuishelley/lesson-1-assignment">here</a> to learn more.</p>
-            </article>
+        <h2>Projects</h2>
+        <section class="projects">
+            <div class="tiles">
+                <img src="images/antologi.png" alt="Mockup of a phone with video UI and the text 'Catching up has never been easier'">
+                <div class="tile-text">
+                    <p>A startup in Google's Area 120 incubator focused on promoting better async work for people by using ML to synthesize meeting recordings.</p>
+                    </div>
+            </div>
+            <div class="tiles">
+                <img src="images/milo.png" alt="Screenshot of a pet supplement website">
+                <div class="tile-text">
+                    <p>A brand identity for a DTC pet health startup focused on creating supplements bespoke to your pup and their individual needs.</p>
+                    </div>
+            </div>
+            <div class="tiles">
+                <img src="images/twl.png" alt="Page designs featuring dogs and cats with handwritten text">
+                <div class="tile-text">
+                    <p>A compilation of essays and interviews about the highs and lows of pet ownership that also doubles as a love letter to all the pets I've ever met.</p>
+                    </div>
+            </div>
+            <div class="tiles">
+                <img src="images/xembly.png" alt="Screenshot of a website focused on meeting notes and automated scheduling">
+                <div class="tile-text">
+                    <p>Featuring Xena, an AI chief of staff that supports you in your work and personal life by taking care of the mundane so you can focus on what's meaningful.</p>
+                    </div>
+            </div>
+            <div class="tiles">
+                <img src="images/chord.png" alt="Photo of someone holding an illustrated playing card with a mountain">
+                <div class="tile-text">
+                    <p>Developing a meaningful way for nomadic people to maintain their relationships and create new ones by sharing their own transient experiences.</p>
+                    </div>
+            </div>
+            <div class="tiles">
+                <img src="images/periodical.png" alt="Mockup showing the desktop and mobile version of a news site">
+                <div class="tile-text">
+                    <p>A platform designed to empower jaded news readers to engage with their local community and go beyond the confines of social media.</p>
+                    </div>
+            </div>
         </section>
-        <hr>
         <footer>
-            <p>This portfolio was coded with ♥ by Shelley Tsui, an experience designer at <a href="https://www.september.works">September Works</a>.</p>
         </footer>
     </body>
-</html>
+ </html>
