Linked about pages and updated typeface

--- a/about-me.html
+++ b/about-me.html
@@ -2,34 +2,42 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>About</title>
+        <title>Shelley Tsui</title>
         <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
     </head>
     <body>
         <header>
-            <h1>Portfolio</h1>
             <nav>
-                <ul class="navigation">
-                    <li>
-                        <a href="index.html">Projects</a>
-                    </li>
-                    <li>
-                        <a href="about-me.html">About Me</a>
-                    </li>
-                </ul>
+                <section class="navigation">
+                        <div>
+                            <a href="index.html">Work</a>
+                        </div>
+                        <div>
+                            <a href="index.html">Resume</a>
+                        </div>
+                        <div>
+                        <a href="about-me.html">About</a>
+                        </div>
+                        <div>
+                            <a href="index.html">Surprise</a>
+                        </div>
+                    
             </nav>
+            <hr>
         </header>
-        <hr>
-
-        <section>
-                <h2>I'd love to get to know you!</h2>
-                <p class="about-me">It's nice to meet you! My name is Shelley. I graduated from UW in 2021 with a BDes in visual communication design and a minor in informatics.
-                    Outside of my 9-5, I love learning new things (like this!), spending time with my husband and pets, and finding as many delicious cake shops as possible in Seattle.
-                </p>
+        <section class ="about"> 
+                <h1>Nice to meet you!</h1>
+            <div class="about-text">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tristique justo ligula, ut hendrerit ex cursus eget. Donec sodales volutpat nisi, eu vehicula massa bibendum in. Phasellus rutrum condimentum dapibus.
+                    Duis vel risus porttitor, finibus lorem egestas, efficitur nisl. Praesent molestie, enim nec sollicitudin semper, ante tortor eleifend velit, ut euismod felis purus non erat. Maecenas in libero vitae risus suscipit
+                    rhoncus quis a ex. Ut velit ante, eleifend mattis vestibulum sollicitudin, sagittis vitae nisl. <br> <br>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tristique justo ligula, ut hendrerit ex cursus eget. Donec sodales volutpat nisi, eu vehicula massa bibendum in. Phasellus rutrum condimentum dapibus.
+                    Duis vel risus porttitor, finibus lorem egestas, efficitur nisl. Praesent molestie, enim nec sollicitudin semper, ante tortor eleifend velit, ut euismod felis purus non erat. Maecenas in libero vitae risus suscipit
+                    rhoncus quis a ex. Ut velit ante, eleifend mattis vestibulum sollicitudin, sagittis vitae nisl.
+            </div>
         </section>
-        <hr>
         <footer>
-            <p>This portfolio was coded with ♥ by Shelley Tsui, an experience designer at <a href="https://www.september.works">September Works</a>.</p>
         </footer>
     </body>
-</html>
+ </html>
