--- a/index.html
+++ b/index.html
@@ -9,20 +9,23 @@
         <header>
             <nav>
                 <section class="navigation">
-                        <div>
-                            <a href="test.html">Work</a>
-                        </div>
-                        <div>
-                            <a href="test.html">Resume</a>
-                        </div>
-                        <div>
-                        <a href="about.html">About</a>
-                        </div>
+                    <div>
+                        <a href="index.html">Work</a>
+                    </div>
+                    <div>
+                        <a href="index.html">Resume</a>
+                    </div>
+                    <div>
+                    <a href="about-me.html">About</a>
+                    </div>
+                    <div>
+                        <a href="index.html">Surprise</a>
+                    </div>
                     
             </nav>
             <hr>
         </header>
-        <h1>A user experience designer based in rainy Seattle. I'm well-versed in design, research, front-end development, and cats.</h1>
+        <h1>User experience designer based in rainy Seattle. Well-versed in design, research, front-end development, and cats.</h1>
         <hr>
         <h2>Projects</h2>
         <section class="projects">
