--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Shelley Tsui</title>
         <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
+        <script src="https://kit.fontawesome.com/474260a395.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
@@ -19,7 +20,7 @@
                     <a href="about-me.html">About</a>
                     </div>
                     <div>
-                        <a href="index.html">Surprise</a>
+                        <a href="index.html"><i class="fa-solid fa-cat"></i></a>
                     </div>
                     
             </nav>
