--- a/about-me.html
+++ b/about-me.html
@@ -4,23 +4,24 @@
         <meta charset="utf-8">
         <title>Shelley Tsui</title>
         <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
+        <script src="https://kit.fontawesome.com/474260a395.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
             <nav>
                 <section class="navigation">
-                        <div>
-                            <a href="index.html">Work</a>
-                        </div>
-                        <div>
-                            <a href="index.html">Resume</a>
-                        </div>
-                        <div>
-                        <a href="about-me.html">About</a>
-                        </div>
-                        <div>
-                            <a href="index.html">Surprise</a>
-                        </div>
+                    <div>
+                        <a href="index.html">Work</a>
+                    </div>
+                    <div>
+                        <a href="index.html">Resume</a>
+                    </div>
+                    <div>
+                    <a href="about-me.html">About</a>
+                    </div>
+                    <div>
+                        <a href="index.html"><i class="fa-solid fa-cat"></i></a>
+                    </div>
                     
             </nav>
             <hr>
