--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <div>
                         <a href="index.html"><i class="fa-solid fa-cat"></i></a>
                     </div>
-                    
+                    </section>
             </nav>
             <hr>
         </header>
