Added styling for responsiveness

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </section>
             </nav>
         </header>
-        <h1 id="intro">Hi, I'm Shelley! I'm a user experience designer based in <span class="italic-blue" id="seattle">Seattle</span>. I'm well-versed in front-end development, design, and <span class="italic-blue" id="cats">cats</span>.</h1>
+        <h1 id="intro">Hi, I'm Shelley! I'm an experience designer based in <span class="italic-blue" id="seattle">Seattle</span>. I'm well-versed in front-end development, design, and <span class="italic-blue" id="cats">cats</span>.</h1>
         <section class="projects">
             <div class="tiles">
                 <img src="images/antologi-pic.svg">
