Updated favicon, display index tile

--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
                 <div class="grid-cell wider-cell">A mobile-design for a music festival celebrating indie game devs.</div>
                 <div class="grid-cell">Brand, Mobile</div>
             </div>
+            <div class="grid-row">
+                <div class="grid-cell">Welcome to Andale</div>
+                <div class="grid-cell wider-cell">An fictional opening sequence based on Jonatham Lethem's Elevator Pitches.</div>
+                <div class="grid-cell">Motion Design</div>
+            </div>
         </div>
         <footer>
             <div class = "about-section">
