Udpated styles and copy

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <p>
                     I graduated from the University of Washington with a Bachelor of Design in visual communication and a minor in
                      informatics. Right now I'm an experience designer at September Works. Some clients I've worked with include 
-                     Microsoft, Google, The New York Times, and Promethean. <br><br>Beyond the 9-5 (technically 8-4), I'm an avid fan of 
+                     Microsoft, Google, and Amazon. <br><br>Beyond the 9-5 (technically 8-4), I'm an avid fan of 
                      video games, my own mediocre baking, and my two tripod dogs. I am only somewhat a fan of my cat and if you met 
                      him you would understand. <br><br>Feel free to reach out for any reason! I'm always interested in new opportunities 
                      and a nice, warm cup of tea.
