--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                     </div>
             </div>
             <div class="tiles">
-                <img src="images/xembly-pic.svg">
+                <img src="images/microsoft-pic.svg">
                 <div class="tile-text">
-                    <p>Featuring Xena, an AI chief of staff that supports you in your work and personal life by taking care of the mundane so you can focus on what's meaningful.</p>
+                    <p>Multiple envisioning projects for Microsoft exploring the intersection of new and existing technology and how we can shape our future.</p>
                     </div>
             </div>
             <div class="tiles">
