Added and linked resume

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <a href="index.html">Works</a>
                     </div>
                     <div>
-                        <a href="index.html">Resume</a>
+                        <a href="assets/tsui-shelley-resume.pdf">Resume</a>
                     </div>
                     <div>
                     <a href="mailto:tsuishelley@gmail.com">Email</a>
