Added acnh site link

--- a/acnh.html
+++ b/acnh.html
@@ -52,8 +52,8 @@
         </section>
         <section class="project-section">
             <div class="project-copy">
-                <h2>Reflection</h2>
-                <p>The checklist is sorted by what is currently available to the user when they visit so that way they don’t have to spend time scrolling to check off the critter they need to. I also utilized local storage so that way users save their progress and could refer back to the site whenever they needed.</p>      
+                <h2>Features v.2</h2>
+                <p>The checklist is sorted by what is currently available to the user when they visit so that way they don’t have to spend time scrolling to check off the critter they need to. I also utilized local storage so that way users save their progress and could refer back to the site whenever they needed. Check it out at https://animalcrossingchecklist.netlify.app/</p>      
             </div>
             <img src="acnh-images/netlify.png">
         </section>
