Increased h1 on mobile

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@ document.addEventListener('DOMContentLoaded', function () {
                     <div>
                       <a href="index.html">Works</a>
                   </div>
+                  <div>
+                    <a href="">About</a>
+                </div>
                     </section>
             </nav>
         </header>
