--- a/index.html
+++ b/index.html
@@ -36,9 +36,6 @@ document.addEventListener('DOMContentLoaded', function () {
                     <div>
                       <a href="index.html">Works</a>
                   </div>
-                  <div>
-                    <a href="">About</a>
-                </div>
                     </section>
             </nav>
         </header>
@@ -47,6 +44,7 @@ document.addEventListener('DOMContentLoaded', function () {
             <div class="tiles">
                 <a href="antologi.html"><img src="images/antologi-pic.png"></a>
                 <div class="tile-text">
+                    <p class="gray">Antologi</p>
                     <p>A startup in Google's Area 120 incubator focused on promoting better async work for people by using ML to synthesize meeting recordings.</p>
                     </div>
             </div>
@@ -56,30 +54,35 @@ document.addEventListener('DOMContentLoaded', function () {
                 <p class="top-right">Confidential</p>
               </div>
               <div class="tile-text">
+                <p class="gray">Microsoft Envisioning Projects</p>
                   <p>Multiple envisioning projects for Microsoft exploring the intersection of new and existing technology and how we can shape our future.</p>
                   </div>
             </div>
             <div class="tiles">
               <a href="caregoals.html"><img src="images/caregoals-pic.png"></a>
               <div class="tile-text">
+                <p class="gray">Care Goals Guide</p>
                   <p>Creating a way for patients with cancer to feel supported in goals of care discussions with their clinician.</p>
                   </div>
           </div>
           <div class="tiles">
             <a href="mixedreality.html"><img src="images/mrdd-pic.png"></a>
             <div class="tile-text">
-                <p>Developing signage and brand material for Mixed Reality Developer Program and Mixed Reality Dev Days, a public MR/VR hackathon hosted by Microsoft.</p>
+              <p class="gray">Mixed Reality Dev Program</p>
+                <p>Developing signage and brand material for Mixed Reality Developer Program and Mixed Reality Dev Days, a MR/VR hackathon hosted by Microsoft.</p>
                 </div>
           </div>
           <div class="tiles">
             <a href="milo.html"><img src="images/milo-pic.png"></a>
             <div class="tile-text">
+              <p class="gray">Milo Treats</p>
                   <p>A brand identity for a DTC pet health startup focused on creating supplements bespoke to your pup and their individual needs.</p>
                   </div>
           </div>
           <div class="tiles">
             <a href="acnh.html"><img src="images/acnh-pic.png"></a>
             <div class="tile-text">
+              <p class="gray">Animal Crossing Checklist</p>
                 <p>Coding and designing a site that provides Animal Crossing New Horizons players with the ability to track their fish, bug, and sea creature progress.</p>
                 </div>
         </div>
