Updated description of project

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ document.addEventListener('DOMContentLoaded', function () {
             <a href="mixedreality.html"><img src="images/mrdd-pic.png"></a>
             <div class="tile-text">
               <p class="gray">Mixed Reality Dev Program</p>
-                <p>Developing signage and brand material for Mixed Reality Developer Program and Mixed Reality Dev Days, a MR/VR hackathon hosted by Microsoft.</p>
+                <p>Developing signage and brand material for Mixed Reality Developer Program and Mixed Reality Dev Days, a Microsoft hackathon.</p>
                 </div>
           </div>
           <div class="tiles">
