updated body margin

--- a/acnh.html
+++ b/acnh.html
@@ -2,11 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>AC Checklist</title>
+        <title>Animal Crossing</title>
         <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
         <link rel="icon" type="image/x-icon" href="images/favicon.png">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
+    <body>
+        <div class="main">
         <header>
             <nav>
                 <section class="navigation">
@@ -60,6 +62,7 @@
         <section class="project-section-2">
             <img src="acnh-images/walkthrough.gif">
         </section>
+    </div>
         <footer>
         </footer>
         <div class="ticker-wrap">
