--- a/caregoals.html
+++ b/caregoals.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+        <div class="main">
         <header>
             <nav>
                 <section class="navigation">
@@ -53,8 +54,10 @@
                 This is one of my favorite projects I’ve ever worked on — so much so that I decided to revisit it years later to further refine its visual communication.</p>
                 <img src="images/caregoals-pic.png">
             </section>
+        </div>
         <footer>
         </footer>
+        
         <div class="ticker-wrap">
             <div class="ticker">
               <span class="item-collection-1">
