--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Shelley Tsui</title>
+        <title>Shelley Tsui, Designer</title>
         <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
         <link rel="icon" type="image/x-icon" href="images/favicon.png">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,6 +24,7 @@ document.addEventListener('DOMContentLoaded', function () {
     }
 });
     </script>
+    <div class="main">
         <header>
             <nav>
                 <section class="navigation">
@@ -68,7 +69,7 @@ document.addEventListener('DOMContentLoaded', function () {
           <div class="tiles">
             <a href="mixedreality.html"><img src="images/mrdd-pic.png"></a>
             <div class="tile-text">
-              <p class="gray">Mixed Reality Dev Program</p>
+              <p class="gray">Mixed Reality Developer Program</p>
                 <p>Developing signage and brand material for Mixed Reality Developer Program and Mixed Reality Dev Days, a Microsoft hackathon.</p>
                 </div>
           </div>
@@ -76,14 +77,14 @@ document.addEventListener('DOMContentLoaded', function () {
             <a href="milo.html"><img src="images/milo-pic.png"></a>
             <div class="tile-text">
               <p class="gray">Milo Treats</p>
-                  <p>A brand identity for a DTC pet health startup focused on creating supplements bespoke to your pup and their individual needs.</p>
+                  <p>A brand identity for a DTC pet health startup that develops supplements bespoke to your pup and their individual needs.</p>
                   </div>
           </div>
           <div class="tiles">
             <a href="acnh.html"><img src="images/acnh-pic.png"></a>
             <div class="tile-text">
               <p class="gray">Animal Crossing Checklist</p>
-                <p>Coding and designing a site that provides Animal Crossing New Horizons players with the ability to track their fish, bug, and sea creature progress.</p>
+                <p>Coding a site that provides Animal Crossing New Horizons players with the ability to track their fish, bug, and sea creature progress.</p>
                 </div>
         </div>
         </section>
@@ -128,6 +129,7 @@ document.addEventListener('DOMContentLoaded', function () {
           </div>
       </div>
       </div>
+    </div>
       <footer>
         <div class="ticker-wrap">
           <div class="ticker">
@@ -150,6 +152,5 @@ document.addEventListener('DOMContentLoaded', function () {
           </div>
         <div>
       </footer>
-
     </body>
  </html>
