--- a/antologi.html
+++ b/antologi.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+        <div class="main">
         <header>
             <nav>
                 <section class="navigation">
@@ -49,6 +50,7 @@
                 <source src="antologi-images/antologi-walkthrough.mp4" type="video/mp4">
               Your browser does not support the video tag.
               </video>        </section>
+            </div>
         <footer>
         </footer>
         <div class="ticker-wrap">
