--- a/milo.html
+++ b/milo.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+        <div class="main">
         <header>
             <nav>
                 <section class="navigation">
@@ -47,6 +48,7 @@
         <section class="project-section-2">
             <img src="milo-images/milo-tshirt.png">
         </section>
+    </div>
         <footer>
         </footer>
         <div class="ticker-wrap">
