--- a/mixedreality.html
+++ b/mixedreality.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+        <div class="main">
         <header>
             <nav>
                 <section class="navigation">
@@ -40,6 +41,7 @@
         <section class="project-section-2">
             <img src="mixedreality-images/mr-site-layouts.png">
         </section>
+    </div>
         <footer>
         </footer>
         <div class="ticker-wrap">
