--- a/index.html
+++ b/index.html
@@ -97,17 +97,19 @@ document.addEventListener('DOMContentLoaded', function () {
                 <div class="carrot"><img src="images/carrot.svg"></div>
             </div>
           <div class="panel">
-              <!-- image goes here -->
-            </div>
+            <p>Using an anonymous Google survey, I collected responses from people all over the world about things they wish they had said or never had the chance to. The publication features AI-generated handwriting to encapsulate the sense of authenticity yet anonymity.</p>
+            <img src="images/unsent-pic.png">
+          </div>
           <div class="accordion">
             <div class="grid-item1">Periodical</div>
             <div class="grid-item2">Empowering news readers to engage with their local community.</div>
             <div class="grid-item3">Envisioning & Interface</div>
             <div class="carrot"><img src="images/carrot.svg"></div>
-
           </div>
           <div class="panel">
-                          <!-- image goes here -->
+              <p class=>Periodical is an interactive news platform that empowers news consumers in their local communities.
+                This digital platform gives readers a way to make a difference with a robust program for community engagement.</p>
+              <img src="images/periodical-pic.png">
           </div>
           <div class="accordion">
             <div class="grid-item1">Chord</div>
@@ -116,7 +118,8 @@ document.addEventListener('DOMContentLoaded', function () {
             <div class="carrot"><img src="images/carrot.svg"></div>
           </div>
           <div class="panel">
-                          <!-- image goes here -->
+            <p>Not only does Chord provide a way to revisit sounds but it allows you to share them with others. Each recording that exists within a Chord card can be given to someone else and remind them of a new sight, a new sound, and a new person.</p>
+            <img src="images/chord-pic.png">
           </div>
           <div class="accordion">
             <div class="grid-item1">Miscellaneous</div>
