added mobile unique heading

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@ document.addEventListener('DOMContentLoaded', function () {
                     </section>
             </nav>
         </header>
-        <h1 id="intro">Hi there, I'm a user experience & visual designer based in <a href="https://www.seattlesouthside.com/" target="_blank" class="italic-blue" id="seattle">rainy Seattle</a>. I'm versed in front-end development, design, and <a href="https://www.youtube.com/watch?v=z3U0udLH974" target="_blank" class="italic-blue" id="cats">cats</a>.</h1>
+        <h1 id="intro" class="desktop">Hi there, I'm a user experience & visual designer based in <a href="https://www.seattlesouthside.com/" target="_blank" class="italic-blue" id="seattle">rainy Seattle</a>. I'm versed in front-end development, design, and <a href="https://www.youtube.com/watch?v=z3U0udLH974" target="_blank" class="italic-blue" id="cats">cats</a>.</h1>
+        <h1 id="intro" class="mobile">Nice to meet you, I'm a user experience & visual designer based in <a href="https://www.seattlesouthside.com/" target="_blank" class="italic-blue" id="seattle">rainy Seattle</a>.</h1>
         <section class="projects">
             <div class="tiles">
                 <a href="antologi.html"><img src="images/antologi-pic.png"></a>
