--- a/antologi.html
+++ b/antologi.html
@@ -34,7 +34,7 @@
         </section>
         <section class="project-section">
             <div class="project-copy">
-                <h2>What I learned</h2>
+                <h2>What I Learned</h2>
             <p>It was my first opportunity to work alongside developers and see the product being designed and coded in tandem with one another. It was also one of the earlier projects that sparked my interest in development, specifically front-end. Antologi existed as both a Chrome extension and mobile app.</p>
             </div>
             <img src="antologi-images/loading-screens.png">
