--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
         <link rel="icon" type="image/x-icon" href="images/favicon.png">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta property="og:image" content="images/og-image.png"/>
     </head>
     <body>
     <script>
