added og image to all pages

--- a/mixedreality.html
+++ b/mixedreality.html
@@ -6,7 +6,8 @@
         <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
         <link rel="icon" type="image/x-icon" href="images/favicon.png">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        
+        <meta property="og:image" content="https://raw.githubusercontent.com/tsuishelley/portfolio/main/images/og-image.png"/>
+
     </head>
     <body>
         <div class="main">
