added about in footer

--- a/index.html
+++ b/index.html
@@ -127,26 +127,30 @@ document.addEventListener('DOMContentLoaded', function () {
       </div>
     </div>
       <footer>
-        <div class="ticker-wrap">
-          <div class="ticker">
-            <span class="item-collection-1">
-              <span class="item">Coded + designed from scratch!</span>
-              <span class="item">Coded + designed from scratch!</span>
-              <span class="item">Coded + designed from scratch!</span>
-              <span class="item">Coded + designed from scratch!</span>
-              <span class="item">Coded + designed from scratch!</span>
-              <span class="item">Coded + designed from scratch!</span>
-            </span>
-            <span class="item-collection-2">
-              <span class="item">Coded + designed from scratch!</span>
-              <span class="item">Coded + designed from scratch!</span>
-              <span class="item">Coded + designed from scratch!</span>
-              <span class="item">Coded + designed from scratch!</span>
-              <span class="item">Coded + designed from scratch!</span>
-              <span class="item">Coded + designed from scratch!</span>
-            </span>
-          </div>
-        <div>
+        <h2>It's nice to meet you.</h2>
+        <p>I graduated from the University of Washington with a Bachelor of Design in visual communication and a minor in informatics. Some clients I've worked with include Microsoft, Google, The New York Times, and Promethean.
+          <br><br>Beyond design, I'm an avid fan of video games, my own mediocre baking, and my loving pets. More recently I've received my certificate in front-end development.
+          Currently looking for a new opportunity in visual or UX design.</p>
       </footer>
+      <div class="ticker-wrap">
+        <div class="ticker">
+          <span class="item-collection-1">
+            <span class="item">Coded + designed from scratch!</span>
+            <span class="item">Coded + designed from scratch!</span>
+            <span class="item">Coded + designed from scratch!</span>
+            <span class="item">Coded + designed from scratch!</span>
+            <span class="item">Coded + designed from scratch!</span>
+            <span class="item">Coded + designed from scratch!</span>
+          </span>
+          <span class="item-collection-2">
+            <span class="item">Coded + designed from scratch!</span>
+            <span class="item">Coded + designed from scratch!</span>
+            <span class="item">Coded + designed from scratch!</span>
+            <span class="item">Coded + designed from scratch!</span>
+            <span class="item">Coded + designed from scratch!</span>
+            <span class="item">Coded + designed from scratch!</span>
+          </span>
+        </div>
+      <div>
     </body>
  </html>
